# ChronicleOs

./: .dockerignore  .gitignore  .prettierrc.json  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  FAQ.md  GETTING_STARTED.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.testnet.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  turbo.json  usersLearn.md
.github/workflows/: ci.yml  live-integration.yml
apps/agents/: .dockerignore  .env.example  Dockerfile  (+5 more)
config/: local-demo.sample.json
docs/: DEVELOPER_SETUP.md  EXAMPLE_WORKFLOWS.md  START_HERE.md
memwal_data/: architect%3Ademo-1.json  architect%3Alive-llm-3.json  architect%3Atask-1.json  architect%3Atask-34.json  architect%3Atask-56.json  architect%3Avideo-1.json  audit%3Ademo-1.json  audit%3Alive-llm-3.json  audit%3Atask-1.json  audit%3Atask-34.json  audit%3Atask-56.json  audit%3Avideo-1.json  research%3Ademo-1.json  research%3Alive-llm-3.json  research%3Atask-1.json  research%3Atask-3.json  research%3Atask-34.json  research%3Atask-56.json  research%3Avideo-1.json  store.json  workflow%3Ademo-1%3Acheckpoint.json  workflow%3Alive-llm-3%3Acheckpoint.json  workflow%3Atask-1%3Acheckpoint.json  workflow%3Atask-3%3Acheckpoint.json  workflow%3Atask-34%3Acheckpoint.json  workflow%3Atask-56%3Acheckpoint.json  workflow%3Avideo-1%3Acheckpoint.json
scripts/: bootstrap.mjs  deploy-prod.ps1  deploy-prod.sh  deploy-testnet.ps1  deploy-testnet.sh  local-demo-bundle.mjs  reset-local-demo.mjs  run-example-workflow.ps1  run-example-workflow.sh  run-local-demo.mjs  verify-local-demo.mjs
(+79 files in other folders)
