[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-os"
version = "0.1.0"
description = "Decentralized multi-agent R&D lab with Walrus + MemWal"
requires-python = ">=3.10"
authors = [{name = "ChronicleOS Team"}]

[tool.setuptools.packages.find]
where = ["apps", "packages"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
exclude = [".git", "__pycache__", ".venv", "dist", "build"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
